--- a/voting-server/package.json
+++ b/voting-server/package.json
@@ -2,9 +2,9 @@
   "name": "voting-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "babel-node index.js",
+    "start": "babel-node app.js",
     "test": "mocha --compilers js:babel-core/register  --require ./test/test-helper.js  --recursive",
     "test:watch": "npm run test -- --watch"
   },
@@ -21,9 +21,11 @@
   "dependencies": {
     "immutable": "3.7.6",
     "redux": "3.3.1",
-    "socket.io": "1.4.5"
+    "socket.io": "^1.7.3"
   },
   "babel": {
-    "presets": ["es2015"]
+    "presets": [
+      "es2015"
+    ]
   }
 }
