--- a/voting-client/package.json
+++ b/voting-client/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    // We need to use a glob that will find all .js and .jsx test files:
     "test": "mocha --compilers js:babel-core/register --require ./test/test-helper.js \"test/**/*@(.js|.jsx)\"",
     "test:watch": "npm run test -- --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "immutable": "^3.8.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
+  },
   "devDependencies": {
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
@@ -20,6 +24,7 @@
     "chai-immutable": "^1.6.0",
     "jsdom": "^9.12.0",
     "mocha": "^3.2.0",
+    "react-hot-loader": "^1.3.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.2"
   },
@@ -28,8 +33,5 @@
       "es2015",
       "react"
     ]
-  },
-  "dependencies": {
-    "immutable": "^3.8.1"
   }
 }
